@@ -1,5 +1,10 @@
 2015-01-21 Andre Heinecke <aheinecke@intevation.de>
 
+	* winexe/wincmd.c (smb_close): Remove and replace
+	by direct usage of talloc_free.
+
+2015-01-21 Andre Heinecke <aheinecke@intevation.de>
+
 	* winexe/wincmd.c (on_ctrl_pipe_error, on_ctrl_pipe_read)
 	(on_ctrl_pipe_close): Fix pipe name.
 
